# Grupo01_progp

./: CMakeLists.txt  Ejercicio1.cpp  Ejercicio2.cpp  datos1.txt  main.cpp  practica.cpp
